# C

./: 1.md  2  2.md  README.md  callback.c  client_c.c  double_linkList,c  double_linkList.c  generate_string.c  log.c  server_s.c  stm32mp57D.md
buildroot_b/: 1.md  Makefile  inittab  rcS
test2/: CMakeLists.txt  main.c
test2/include/: hello.c  hello.h
